--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body{
     border-width: 1px;
     border-style: solid;
     border-color: #FED4E5;
+    box-shadow: 2px 2px 10px #000;
     display: flex;
     flex-direction: column;
     padding: 10px 0;
@@ -165,10 +166,17 @@ input[type="range"] {
     cursor: pointer;
 }
 
+.btn:focus{
+    color: #fff;
+    background-color: #000;
+}
+
 #btn3months {
     border-top-left-radius:30px;
     border-bottom-left-radius:30px;
 }
+
+
 
 #btn12months {
     border-top-right-radius: 30px;
@@ -218,4 +226,3 @@ input[type="range"] {
 
 
 
-/* responsive design */
