--- a/style.css
+++ b/style.css
@@ -72,9 +72,12 @@ body{
     border-radius: 30px;
     margin-top: 10px;
     outline: none;
-    background-color: #F7F7F7;
+    background-color: transparent;
+    border: 2px solid rgb(255, 0, 255 , 0.6);
     text-align: center;
 }
+
+
 
 /* top right container content */
 .right-container {
@@ -107,7 +110,7 @@ body{
 .range{
     flex-basis: 30%;
     padding: 10px 0;
-    border: 1px solid #333;
+    border: 2px solid rgb(255, 123, 145);
     border-radius: 80px;
     width: 90%;
     display: flex;
@@ -122,14 +125,25 @@ body{
 
 input[type="range"] {
     width: 80%;
-    background-color: #333;
+    height: 5px;
+    background: linear-gradient(to right  , rgb(168, 67, 228 , 0.5) , rgb(241, 66, 193 , 1) );
     margin-bottom: 5px;
+    border-radius: 10px;
+    outline: none;
+   -webkit-appearance: none; 
+    appearance: none; 
 }
 
 .range-below-para{
     font-size: 18px;
-    font-weight: 600;
+    font-weight: 700;
+    background-image: linear-gradient(to right ,tomato , #A843E4 , #F142C1 );
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
 }
+
+
 
 /* part-3 */
 
@@ -154,35 +168,41 @@ input[type="range"] {
 
 
 .btn {
-    /* background-color: #fff; */
     font-size: 15px;
     font-weight: 500;
     padding: 15px;
     margin: 0 4px;
-    border-color: #000;
+    border: none;
+    cursor: pointer;
+    font-weight: 600;
+    position: relative;
+    /* overflow: hidden; */
+}
+
+.btn::before{
+    content: "";
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  right: -2px;
+  bottom: -2px;
+  z-index: -1;
+  border: 2px solid transparent;
+  background-image: linear-gradient(to bottom ,#F142C1 ,tomato,#A843E4 ,#8E44F2 );
+  border-radius: 5px;
 }
 
 .btn:hover{
-    cursor: pointer;
+    cursor: pointer !important;
 }
 
 .btn:focus , .focus{
-    color: #fff;
-    background-color: #000;
-}
-
-
-#btn3months {
-    border-top-left-radius:30px;
-    border-bottom-left-radius:30px;
+    background: linear-gradient(to right bottom ,rgb(240, 118, 97),#FE6F6F,#F142C1 ,#A843E4 ,#8E44F2 );
 }
 
 
 
-#btn12months {
-    border-top-right-radius: 30px;
-    border-bottom-right-radius: 30px;
-}
+
 
 /* The bottom container  */
 .container-2{
@@ -202,8 +222,11 @@ input[type="range"] {
     align-items: center;
     justify-content: center;
     font-size: 120px;
-    /* letter-spacing:-5px; */
+    letter-spacing:-10px;
 }
+
+
+
 
 .dynamic-text{
     flex-basis: 70%;
